# Support-Mind

./: .dockerignore  .gitignore  DockerFile  README.md  app.py  logger.py  main.py  pyproject.toml  render.yaml  streamlit_app.py
.streamlit/: config.toml
agent/: graph.py  llm.py  nodes.py  schemas.py  state.py
agent/guardrails/: input_checks.py  output_checks.py
api/: main.py
cache/: semantic_cache.py
dspy_modules/: compiled_classifier.json  intent_classifier.py  load.py  train.py
rag/: faq_data.py  injest.py  pipeline.py
tools/: mock_apis.py
ui/: app.py
