[project]
name = "support-mind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy>=3.1.0",
    "fastapi>=0.136.3",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langgraph>=1.2.4",
    "llm-guard>=0.3.16",
    "pinecone>=9.1.0",
    "pinecone-client>=6.0.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
